--- a/mytoast/src/main/AndroidManifest.xml
+++ b/mytoast/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,12 +20,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".MediaButtonReceiver" >
-            <intent-filter android:priority="1000">
-                <action android:name="android.intent.action.MEDIA_BUTTON" >
-                </action>
-            </intent-filter>
-        </receiver>
+        <!--<receiver android:name=".MediaButtonReceiver" >-->
+            <!--<intent-filter android:priority="1000">-->
+                <!--<action android:name="android.intent.action.MEDIA_BUTTON" >-->
+                <!--</action>-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
+        <!--<receiver android:name=".AudioBroadcast">-->
+            <!--            <intent-filter android:priority="1000">-->
+            <!--                <action android:name="android.intent.action.MEDIA_BUTTON"/>-->
+            <!--            </intent-filter>-->
+
+        <!--</receiver>-->
     </application>
 
 </manifest>
