--- a/mytoast/src/main/AndroidManifest.xml
+++ b/mytoast/src/main/AndroidManifest.xml
@@ -20,18 +20,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<receiver android:name=".MediaButtonReceiver" >-->
-            <!--<intent-filter android:priority="1000">-->
-                <!--<action android:name="android.intent.action.MEDIA_BUTTON" >-->
-                <!--</action>-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
-        <!--<receiver android:name=".AudioBroadcast">-->
-            <!--            <intent-filter android:priority="1000">-->
-            <!--                <action android:name="android.intent.action.MEDIA_BUTTON"/>-->
-            <!--            </intent-filter>-->
+        <receiver android:name=".MediaButtonReceiver" >
+            <intent-filter android:priority="1000">
+                <action android:name="android.intent.action.MEDIA_BUTTON" >
+                </action>
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".AudioBroadcast">
+                        <intent-filter android:priority="1000">
+                            <action android:name="android.intent.action.MEDIA_BUTTON"/>
+                        </intent-filter>
 
-        <!--</receiver>-->
+        </receiver>
     </application>
 
 </manifest>
